<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>locobot_base_control</name>
  <version>0.0.0</version>
  <description>The locobot_base_control package</description>
  <maintainer email="zy17@stanford.edu">yu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>numpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
